2008-09-29  Bastien Nocera  <hadess@hadess.net>

	* daemon/gvfsbackendobexftp.c (_is_nokia_3650),
	(get_name_and_icon), (_get_device_properties),
	(g_vfs_backend_obexftp_finalize), (g_vfs_backend_obexftp_init),
	(_query_file_info_helper), (session_connect_error_cb),
	(session_connected_cb), (do_mount),
	(g_vfs_backend_obexftp_class_init):
	* daemon/obexftp-marshal.list:
	Port to BlueZ 4.x API and obex-data-server SVN API,
	use the "Icon" property to get the icon, instead of parsing the
	device class ourselves (#552356)

2008-09-26  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonvfs.[ch]:
        * common/gvfsdaemonprotocol.h:
        * daemon/mount.c:
	Reverse map fuse paths to gvfs uris in
	g_file_new_for_path().

2008-09-25  Alexander Larsson  <alexl@redhat.com>

        * common/gvfsdaemonprotocol.c:
        (_g_dbus_get_file_attribute):
	Free returned strv with g_strfreev, not dbus_free_string_array. (#529596)

2008-09-23  Alexander Larsson  <alexl@redhat.com>

	* configure.ac:
	Bump version of unstable branch to 1.1.1

2008-09-23  Alexander Larsson  <alexl@redhat.com>

        * monitor/proxy/gproxyvolumemonitor.[ch]:
        * monitor/proxy/gproxyvolumemonitor.h:
        * monitor/proxy/remote-volume-monitor-module.c:
	Only call the IsSupported dbus call when the class
	is actually needed instead of on gio init.
	Don't integrate internal session bus with mainloop
	during is_support code, as that is not necessary yet, and
	it caused problem if done in a thread.
	
	This fixes the trash crash issue in bug #547568.

2008-09-23  Alexander Larsson  <alexl@redhat.com>

        * client/Makefile.am:
        * common/Makefile.am:
        * common/gmountsource.c:
        * common/gmounttracker.c:
        * monitor/gphoto2/Makefile.am:
        * monitor/hal/Makefile.am:
        * monitor/proxy/Makefile.am:
	Link all modules against the installed libgvfscommon instead
	of duplicating the statically linked one. This is safe wrt